--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,19 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.0'
+    compile 'com.android.support:cardview-v7:21.0.0'
+    compile 'com.android.support:palette-v7:21.0.0'
+    compile 'com.android.support:recyclerview-v7:21.0.0'
+
+    compile 'com.fmsirvent:parallaxeverywhere:1.0.1'
+    compile 'com.squareup.picasso:picasso:2.4.0'
+    compile 'com.squareup:otto:1.3.5'
+    compile 'org.apache.commons:commons-lang3:3.3.2'
+//    compile 'com.google.guava:guava:18.0'
+
+    compile 'com.github.johnpersano:supertoasts:1.3.4@aar'
+    compile 'com.github.castorflex.smoothprogressbar:library:1.0.0'
+    compile 'com.github.castorflex.smoothprogressbar:library-circular:1.0.2'
 }
 
 
