--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,8 @@
 
 buildscript {
     repositories {
-        jcenter()
+//        jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.0.0'
@@ -14,6 +15,7 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
+//        jcenter()
+        mavenCentral()
     }
 }
