--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,9 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.4.0'
     compile 'com.squareup:otto:1.3.5'
     compile 'org.apache.commons:commons-lang3:3.3.2'
-//    compile 'com.google.guava:guava:18.0'
+    compile 'joda-time:joda-time:2.6'
+
+    compile 'com.google.guava:guava:18.0'
 
     compile 'com.github.johnpersano:supertoasts:1.3.4@aar'
     compile 'com.github.castorflex.smoothprogressbar:library:1.0.0'
