--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,11 @@ android {
         abortOnError false
     }
 
+    packagingOptions {
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
+
 }
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -57,7 +62,6 @@ dependencies {
     compile 'com.squareup:otto:1.3.5'
     compile 'org.apache.commons:commons-lang3:3.3.2'
     compile 'joda-time:joda-time:2.6'
-
     compile 'com.google.guava:guava:18.0'
 
     compile 'com.github.johnpersano:supertoasts:1.3.4@aar'
