--- a/app/gradle.properties
+++ b/app/gradle.properties
@@ -1,1 +1,11 @@
-versionss=3
+defaultAppId=github.chenupt.calendar
+
+compileSdkVersionNum=21
+buildToolsVersionNum=21.1.2
+minSdkVersionNum=14
+targetSdkVersionNum=21
+
+versionMajor=0
+versionMinor=0
+versionPatch=1
+versionBuild=0
