--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,7 +68,7 @@ android {
 }
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:21.0.0'
+    compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.android.support:cardview-v7:21.0.0'
     compile 'com.android.support:palette-v7:21.0.0'
     compile 'com.android.support:recyclerview-v7:21.0.0'
@@ -80,6 +80,7 @@ dependencies {
     compile 'joda-time:joda-time:2.6'
     compile 'com.google.guava:guava:18.0'
 
+    compile 'com.github.chenupt.android:multiplemodel:1.1.0-SNAPSHOT@aar'
     compile 'com.github.johnpersano:supertoasts:1.3.4@aar'
     compile 'com.github.castorflex.smoothprogressbar:library:1.0.0'
     compile 'com.github.castorflex.smoothprogressbar:library-circular:1.0.2'
