--- a/build.gradle
+++ b/build.gradle
@@ -17,5 +17,8 @@ allprojects {
     repositories {
 //        jcenter()
         mavenCentral()
+        maven {
+            url "https://oss.sonatype.org/content/groups/public"
+        }
     }
 }
