--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,13 @@ android {
     }
 
 }
+
+configurations.all {
+    resolutionStrategy {
+        cacheChangingModulesFor 0, 'seconds'
+    }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
@@ -80,7 +87,7 @@ dependencies {
     compile 'joda-time:joda-time:2.6'
     compile 'com.google.guava:guava:18.0'
 
-    compile 'com.github.chenupt.android:multiplemodel:1.1.0-SNAPSHOT@aar'
+    compile ("com.github.chenupt.android:multiplemodel:1.1.0-SNAPSHOT@aar"){ changing=true }
     compile 'com.github.johnpersano:supertoasts:1.3.4@aar'
     compile 'com.github.castorflex.smoothprogressbar:library:1.0.0'
     compile 'com.github.castorflex.smoothprogressbar:library-circular:1.0.2'
