--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,6 +88,8 @@ dependencies {
     compile 'com.google.guava:guava:18.0'
 
     compile ("com.github.chenupt.android:multiplemodel:1.1.1-SNAPSHOT@aar"){ changing=true }
+    compile ('com.github.chenupt.android:dragtoplayout:1.0.2-SNAPSHOT@aar'){ changing=true }
+
     compile 'com.github.johnpersano:supertoasts:1.3.4@aar'
     compile 'com.github.castorflex.smoothprogressbar:library:1.0.0'
     compile 'com.github.castorflex.smoothprogressbar:library-circular:1.0.2'
